--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     
     <div class="grid-container">
         <div class="grid-item">
-            <img src="file:///Users/edgarmontelares/Downloads/WhatsApp%20Image%202025-02-20%20at%2016.51.40.jpeg" alt="Promoção 1">
+            <img src="https://github.com/Montelares01/postoliberdade/blob/main/WhatsApp%20Image%202025-02-20%20at%2016.42.27.jpeg" alt="Promoção 1">
         </div>
         <div class="grid-item">
             <img src="imagem2.jpg" alt="Promoção 2">
