--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
             <img src="https://github.com/Montelares01/postoliberdade/blob/main/WhatsApp%20Image%202025-02-20%20at%2016.42.27.jpeg" alt="Promoção 1">
         </div>
         <div class="grid-item">
-            <img src="imagem2.jpg" alt="Promoção 2">
+            <img src="https://github.com/Montelares01/postoliberdade/blob/main/WhatsApp%20Image%202025-02-20%20at%2016.42.28%20(1).jpeg" alt="Promoção 2">
         </div>
         <div class="grid-item">
-            <img src="imagem3.jpg" alt="Promoção 3">
+            <img src="https://github.com/Montelares01/postoliberdade/blob/main/WhatsApp%20Image%202025-02-20%20at%2016.42.28.jpeg" alt="Promoção 3">
         </div>
         <div class="grid-item">
-            <img src="imagem4.jpg" alt="Promoção 4">
+            <img src="https://github.com/Montelares01/postoliberdade/blob/main/WhatsApp%20Image%202025-02-20%20at%2016.51.40.jpeg" alt="Promoção 4">
         </div>
     </div>
     
