--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Posto [Nome do Posto] - Promoções Exclusivas</title>
+    <title>Posto Liberdade - Promoções Exclusivas</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -52,7 +52,7 @@
     </style>
 </head>
 <body>
-    <div class="header">Bem-vindo ao Posto [Nome do Posto]</div>
+    <div class="header">Bem-vindo ao Posto Liberdade</div>
     
     <div class="grid-container">
         <div class="grid-item">
@@ -70,7 +70,7 @@
     </div>
     
     <div class="footer">
-        <a href="#" class="button">Clique aqui para entrar na lista de transmissão</a>
+        <a href="#" class="button">Clique aqui para entrar na lista de transmissão do Posto Liberdade</a>
     </div>
 </body>
 </html> 
